* All videos transitioned to Vimeo. * Added author thumbnails for Catherine and Josh. * Updated title to include 2MASS and Gaia. * Prevent wrapping of inline equations, and add Eq. links.

--- a/map3d/static/css/expo.css
+++ b/map3d/static/css/expo.css
@@ -54,6 +54,12 @@ h3 {
   border-bottom-color: #DADADA;
 }
 
+.top-line {
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: #DADADA;
+}
+
 .page-header {
   border-bottom-color: #DADADA;
 }
@@ -174,7 +180,7 @@ video {
  */
 
 .author-image {
-  max-width: 30%;
+  max-width: 50%;
   max-height: auto;
   margin: 0 auto;
 }
@@ -206,6 +212,10 @@ div {
     padding-bottom: 20px;
   }
   
+  .author-image {
+    max-width: 30%;
+  }
+
   .padding-xs-20 {
     padding-left: 20px;
     padding-right: 20px;
